--- a/templates/deal/_form.html.twig
+++ b/templates/deal/_form.html.twig
@@ -1,31 +1,37 @@
 {{ form_start(form) }}
 <div class="form-group">
-    {{ form_label(form.title, 'Title') }}
-    {{ form_widget(form.title, {'attr': {'class': 'form-control', 'id': 'title', 'placeholder': 'Enter title'}}) }}
+    {{ form_label(form.title, 'Titre') }}
+    {{ form_widget(form.title, {'attr': {'class': 'form-control', 'id': 'title', 'placeholder': ''}}) }}
 </div>
 <div class="form-group">
     {{ form_label(form.description, 'Description') }}
-    {{ form_widget(form.description, {'attr': {'class': 'form-control', 'id': 'description', 'placeholder': 'Enter description'}}) }}
+    {{ form_widget(form.description, {'attr': {'class': 'form-control', 'id': 'description', 'placeholder': ''}}) }}
+</div>
+<div class="form-group row">
+    <div class="col-md-6">
+        {{ form_label(form.price, 'Prix') }}
+        {{ form_widget(form.price, {'attr': {'class': 'form-control', 'id': 'price', 'placeholder': ''}}) }}
+    </div>
+    <div class="col-md-6">
+        {{ form_label(form.normalPrice, 'Prix habituel') }}
+        {{ form_widget(form.normalPrice, {'attr': {'class': 'form-control', 'id': 'normalPrice', 'placeholder': ''}}) }}
+    </div>
 </div>
 <div class="form-group">
-    {{ form_label(form.price, 'Price') }}
-    {{ form_widget(form.price, {'attr': {'class': 'form-control', 'id': 'price', 'placeholder': 'Enter price'}}) }}
+    {{ form_label(form.shipping, 'Livraison') }}
+    {{ form_widget(form.shipping, {'attr': {'class': 'form-control', 'id': 'shipping', 'placeholder': ''}}) }}
 </div>
 <div class="form-group">
-    {{ form_label(form.normalPrice, 'Normal Price') }}
-    {{ form_widget(form.normalPrice, {'attr': {'class': 'form-control', 'id': 'normalPrice', 'placeholder': 'Enter normal price'}}) }}
+    {{ form_label(form.promoCode, 'Code promo') }}
+    {{ form_widget(form.promoCode, {'attr': {'class': 'form-control', 'id': 'promoCode', 'placeholder': ''}}) }}
 </div>
 <div class="form-group">
-    {{ form_label(form.shipping, 'Shipping') }}
-    {{ form_widget(form.shipping, {'attr': {'class': 'form-control', 'id': 'shipping', 'placeholder': 'Enter shipping'}}) }}
+    {{ form_label(form.link, 'Lien') }}
+    {{ form_widget(form.link, {'attr': {'class': 'form-control', 'id': 'link', 'placeholder': 'www.exempledeal.com'}}) }}
 </div>
 <div class="form-group">
-    {{ form_label(form.promoCode, 'Promo Code') }}
-    {{ form_widget(form.promoCode, {'attr': {'class': 'form-control', 'id': 'promoCode', 'placeholder': 'Enter promo code'}}) }}
+    {{ form_label(form.imageFile, 'Image') }}
+    {{ form_widget(form.imageFile, {'attr': {'class': 'form-control'}}) }}
 </div>
-<div class="form-group">
-    {{ form_label(form.link, 'Link') }}
-    {{ form_widget(form.link, {'attr': {'class': 'form-control', 'id': 'link', 'placeholder': 'Enter link'}}) }}
-</div>
-<button type="submit" class="btn btn-primary">{{ button_label|default('Save') }}</button>
+<button type="submit" class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
