--- a/templates/promo_code/_form.html.twig
+++ b/templates/promo_code/_form.html.twig
@@ -1,4 +1,23 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="form-group">
+    {{ form_label(form.Title, 'Titre') }}
+    {{ form_widget(form.Title, {'attr': {'class': 'form-control', 'id': 'title', 'placeholder': ''}}) }}
+</div>
+<div class="form-group">
+    {{ form_label(form.Description, 'Description') }}
+    {{ form_widget(form.Description, {'attr': {'class': 'form-control', 'id': 'description', 'placeholder': ''}}) }}
+</div>
+<div class="form-group">
+    {{ form_label(form.code, 'Code') }}
+    {{ form_widget(form.code, {'attr': {'class': 'form-control', 'id': 'shipping', 'placeholder': ''}}) }}
+</div>
+<div class="form-group">
+    {{ form_label(form.link, 'Lien') }}
+    {{ form_widget(form.link, {'attr': {'class': 'form-control', 'id': 'link', 'placeholder': 'www.exemplecodepromo.com'}}) }}
+</div>
+<div class="form-group">
+    {{ form_label(form.imageFile, 'Image') }}
+    {{ form_widget(form.imageFile, {'attr': {'class': 'form-control'}}) }}
+</div>
+<button type="submit" class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
