--- a/templates/promo_code/new.html.twig
+++ b/templates/promo_code/new.html.twig
@@ -1,11 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New PromoCode{% endblock %}
+{% block title %}Nouveau code promo{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <style>
+        .card {
+            animation: fadeInUp 0.5s;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <h1>Create new PromoCode</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card animate__animated animate__fadeInUp mt-4">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h3 class="text-center">Poster un nouveau code promo</h3>
+                            </div>
+                            <div class="col-md-4">
+                                <a class="btn bg-primary text-white" href="{{ path('deal_new') }}">Ou poster un deal</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        {{ include('promo_code/_form.html.twig') }}
+                    </div>
+                </div>
 
-    {{ include('promo_code/_form.html.twig') }}
-
-    <a href="{{ path('promo_code_index') }}">back to list</a>
+                <a href="{{ path('promo_code_index') }}" class="btn btn-secondary mt-3 animate__animated animate__fadeInUp">Retour aux codes promo</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
