--- a/templates/promo_code/index.html.twig
+++ b/templates/promo_code/index.html.twig
@@ -49,7 +49,7 @@
                                 </div>
                             </div>
                             <div class="card-footer text-right">
-                                <a href="{{ path('deal_show', {'id': promo_code.id}) }}" class="btn btn-primary">
+                                <a href="{{ path('promo_code_show', {'id': promo_code.id}) }}" class="btn btn-primary">
                                     Voir les details du code promo</a>
                             </div>
                         </div>
