--- a/templates/promo_code/show.html.twig
+++ b/templates/promo_code/show.html.twig
@@ -1,38 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}PromoCode{% endblock %}
+{% block title %}Code promo{% endblock %}
 
 {% block body %}
-    <h1>PromoCode</h1>
+    <div class="container" style="margin-top: 15px; margin-bottom: 15px">
+        <div class="card h-60 animate__animated animate__fadeInUp">
+            <div class="row g-0">
+                <div class="col-md-4 d-flex align-items-center">
+                    <div class="h-100 w-100" style="position: relative;">
+                        <img src="{{ vich_uploader_asset(promo_code, 'imageFile') }}"
+                             class="card-img h-100 object-fit-cover" alt="{{ promo_code.imageName }}">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title mt-3 font-weight-bold"
+                            style="color: black">{{ promo_code.Title }}</h3>
+                        <h4 class="text-secondary">Code : {{ promo_code.code }}</h4>
+                        <div class="d-flex justify-content-between align-items-center mt-3">
+                            <a href="{{ promo_code.link }}" class="btn btn-primary rounded-pill mr-3">
+                                Aller au code promo
+                                <i class="fa-solid fa-arrow-up-right-from-square ml-2"></i>
+                            </a>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ promo_code.id }}</td>
-            </tr>
-            <tr>
-                <th>Link</th>
-                <td>{{ promo_code.link }}</td>
-            </tr>
-            <tr>
-                <th>Code</th>
-                <td>{{ promo_code.code }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ promo_code.Title }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ promo_code.Description }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('promo_code_index') }}">back to list</a>
-
-    <a href="{{ path('promo_code_edit', {'id': promo_code.id}) }}">edit</a>
-
-    {{ include('promo_code/_delete_form.html.twig') }}
+                        </div>
+                        <p class="card-text mt-3" style="color: black">{{ promo_code.Description }}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer text-left">
+                <a href="{{ path('promo_code_index') }}" class="btn btn-secondary">
+                    Retour aux codes promo</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
