--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,6 +54,7 @@
                         <div class="dropdown-menu" aria-labelledby="profileDropdown">
                             <a class="dropdown-item" href="{{ path('app_user_profile') }}">Profil</a>
                             <a class="dropdown-item" href="{{ path("app_user_profile_deals") }}">Mes Deals</a>
+                            <a class="dropdown-item" href="{{ path("app_user_edit", {id: app.user.id}) }}">Mes paramètres</a>
                             <a class="dropdown-item" href="{{ path("app_logout") }}">Deconnexion</a>
                         </div>
                     </li>
